allowed for user keypress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>34</title>
 </head>
-<body>
+<scri>
+    <script>
     var array = [
         { q: "QUESTION", a: "ANSWER" }
         { q: "QUESTION", a: "ANSWER" }
@@ -19,5 +20,12 @@
         { q: "QUESTION", a: "ANSWER" }
         { q: "QUESTION", a: "ANSWER" }
     ];
+
+    document.onkeyup = function (event) {
+        var input = event.key;
+        
+    }
+
+    </script>
 </body>
 </html>
