--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </head>
 <body>
     <h1>Answer the question below</h1>
+    <h2>READ THE TUTORIAL</h2>
     <h3 id = "score">Score: 0</h3>
     <button id="tutorialButton" class="button" onclick="displayTutorial()">Hide Tutorial</button>
     <div id="tutorial">
