made button round

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             font-size: 16px;
             margin: 4px 2px;
             transition-duration: 0.4s;
+            border-radius: 16px;
         }
 
         .button:hover {
@@ -49,7 +50,7 @@
         In order to answer the question,
         <br>Press either t for true or f for false
     </div>
-    <h4 id = "question">e</h4>
+    <h1 id = "question">e</h1>
     <script>
     var count = 0, score = 0; 
 
