added to tutorial

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div id="tutorial">
         In order to answer the question,
         <br>Press either t for true or f for false
+        <br>Some answers may be very opinionated and biased
     </div>
     <h1 id = "question">e</h1>
     <script>
