stylized tutorial a bit more

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 
         #tutorial {
             line-height: 2;
-            width: 100%;
+            width: 40%;
             padding: 25px 0;
             text-align: center;
             background-color: rgb(254, 113, 113);
             margin-top: 5px;
+            margin-left:auto;
+            margin-right:auto;
         }
     </style>
 </head>
