made page look better with hr

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <br>Press either t for true or f for false
         <br>Some answers may be very opinionated and biased
     </div>
+    <hr style="width:50%;height:3px;border-width:0;color:gray;background-color:gray">
     <h1 id = "question">e</h1>
     <script>
     var count = 0, score = 0; 
